--- a/ui/index.html
+++ b/ui/index.html
@@ -104,7 +104,45 @@
       gap: 16px;
       margin-top: 16px;
     }
-    .form-group { display: flex; flex-direction: column; }
+    .url-input-group {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      margin-bottom: 8px;
+    }
+    .url-input {
+      flex: 1;
+      padding: 10px 12px;
+      border: 1px solid var(--border);
+      border-radius: 8px;
+      font-size: 0.95rem;
+      color: var(--text);
+      background: #fafbfc;
+      transition: border-color 0.15s;
+    }
+    .url-input:focus {
+      outline: none;
+      border-color: var(--primary);
+      box-shadow: 0 0 0 3px rgba(37,99,235,0.1);
+    }
+    .remove-url-btn {
+      background: var(--error);
+      color: #fff;
+      border: none;
+      border-radius: 50%;
+      width: 24px;
+      height: 24px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background 0.15s;
+    }
+    .remove-url-btn:hover {
+      background: #dc2626;
+    }
 
     .actions {
       display: grid;
@@ -250,7 +288,28 @@
       font-size: 0.82rem;
       word-break: break-all;
     }
-    .source-item a:hover { text-decoration: underline; }
+    .source-links {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin-top: 8px;
+    }
+    .source-link {
+      display: inline-block;
+      color: var(--primary);
+      text-decoration: none;
+      font-size: 0.9rem;
+      padding: 6px 12px;
+      border: 1px solid var(--border);
+      border-radius: 6px;
+      background: #f8fafc;
+      transition: background 0.15s, border-color 0.15s;
+    }
+    .source-link:hover {
+      background: var(--primary);
+      color: #fff;
+      text-decoration: none;
+    }
 
     .extract-content {
       background: #f8fafc;
@@ -327,8 +386,14 @@
           </select>
         </div>
         <div class="form-group">
-          <label for="rootPageUrl">Root Confluence URL</label>
-          <input id="rootPageUrl" type="text" value="https://akshatanand.atlassian.net/wiki/spaces/~5e80e683cb85aa0c1448bd0f/pages/327681/Software+architecture+review" />
+          <label>Confluence Source URLs</label>
+          <div id="urlContainer">
+            <div class="url-input-group">
+              <input type="text" class="url-input" value="https://akshatanand.atlassian.net/wiki/spaces/~5e80e683cb85aa0c1448bd0f/pages/327681/Software+architecture+review" />
+              <button type="button" class="remove-url-btn" style="display: none;">&times;</button>
+            </div>
+          </div>
+          <button type="button" id="addUrlBtn" class="btn-secondary" style="margin-top: 8px; padding: 6px 12px; font-size: 0.85rem;">+ Add Another URL</button>
         </div>
         <div class="form-group">
           <label for="maxDepth">Max Depth</label>
